fixed bounce down fixed white space

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,8 +12,8 @@ html {
 	scroll-padding-top: 82px;
 }
 body {
-	font-family: 'Montserrat', sans-serif;
 	position: relative;
+	font-family: 'Montserrat', sans-serif;	
 	background-color: $bg-color;
 }
 
@@ -37,6 +37,7 @@ h2 {
 nav {
 	text-transform: uppercase;
 	transition: background-color 0.6s;
+	z-index: 1;
 	a,
 	i {
 		color: $white;
@@ -56,15 +57,18 @@ nav {
 	.active {
 		color: $main-color;
 	}
-	z-index: 1;
-}
-.navbar-brand {
-	font-weight: bold;
+
+
+	.fa-bars {
+		padding: 10px;
+	}
+	.navbar-brand {
+		font-weight: bold;
+	}
+	
 }
 
-.fa-bars {
-	padding: 10px;
-}
+
 
 #gamers {
 	color: $main-color;
@@ -76,7 +80,11 @@ header {
 	color: $white;
 
 	h1 {
+		font-size: 30px;
 		text-transform: uppercase;
+	}
+	p{
+		font-size: 14px;
 	}
 
 	.hero-img {
@@ -85,7 +93,8 @@ header {
 		background-image: url('../img/playsmall640.jpg');
 		background-position: center;
 		background-size: cover;
-		width: 100%;
+		background-attachment: fixed;
+		// width: 100%;
 		z-index: 0;
 	}
 	.hero-shadow {
@@ -101,30 +110,25 @@ header {
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
-		height: 100vh;
-		width: 100%;
+		height: 100%;
+		// width: 100%;
 		padding: 10px;
 		text-align: center;
 		z-index: 5;
 	}
-	@media (min-width: 1200px) {
-		.hero-img {
-			background-image: url('../img/playbig920.jpg');
-		}
-	}
+
 	.btn-outline-light {
 		text-transform: uppercase;
 	}
 
 	.fa-chevron-down {
-		// position: absolute;
-		font-size: 30px;
-		position: absolute;
-		bottom: 20px;
+        position: absolute;
 		left: 50%;
 		transform: translateX(-50%);
-		color: $white;
-	}
+        bottom: 20px;
+        font-size: 60px;
+        color: $white;
+    }
 }
 
 .aboutus {
@@ -214,47 +218,49 @@ header {
 }
 
 .prices {
-	.full-pack {
-		text-transform: uppercase;
-		font-weight: bold;
-	}
-	.underline-prices {
-		height: 2px;
-		width: 300px;
-		background-color: $bg-color;
-		margin: 15px auto;
-	}
-	h3 {
-		text-transform: uppercase;
-		color: $main-color;
-	}
-	.prices-elements {
-		font-weight: bold;
-	}
-	.btn {
-		text-transform: uppercase;
-	}
-	.price {
-		font-weight: bold;
-		font-size: 24px;
-	}
-	.price-box {
-		padding: 30px;
-		background-color: $white;
-		border-bottom: 1px solid;
-		border-right: 1px solid;
-		box-shadow: 5px 5px 3px grey;
-		transition: transform 0.5s;
-	}
+    .price-box {
+        margin: 20px 10px;
+        padding: 30px;
+        background-color: $white;
+        box-shadow: 5px 5px 5px rgba(0, 0, 0, .4);
+        transition: transform .3s;
 
-	.price-box:hover {
-		transform: scale(1.05);
-	}
-	.price-info {
-		a {
-			text-decoration: none;
-		}
-	}
+        h3 {
+            color: $main-color;
+            text-transform: uppercase;
+        }
+
+        span {
+            font-weight: bold;
+        }
+
+        i {
+            padding: 0 5px;
+            font-size: 24px;
+        }
+
+        button {
+            padding: 10px 20px;
+            text-transform: uppercase;
+        }
+
+        .price-tag {
+            font-size: 30px;
+            font-weight: bold;
+        }
+    }
+
+    .price-box:hover {
+        transform: scale(1.05);
+    }
+
+    .price-info {
+        margin-top: 30px;
+
+        a {
+            text-decoration: none;
+        }
+    }
 }
 
 .team {
@@ -381,17 +387,6 @@ header {
 		}
 	}
 }
-
-@media (min-width: 992px) {
-	html {
-		scroll-padding-top: 72px;
-	}
-	.aboutus-hero {
-		background-image: url('../img/technology_big.jpg');
-		background-position: 50% 55%;
-	}
-}
-
 @media (min-width: 768px) {
 	header {
 		h1 {
@@ -399,7 +394,28 @@ header {
 		}
 
 		p {
-			font-size: 24px;
+			font-size: 20px;
 		}
+	}
+}
+@media (min-width: 992px) {
+	nav {
+        height: 82px;
+    }
+	.aboutus-hero {
+		background-image: url('../img/technology_big.jpg');
+		// background-position: 50% 55%;
+	}
+	.prices {
+        .price-info {
+            font-size: 18px;
+        }
+    }
+}
+
+
+@media (min-width: 1200px) {
+	.hero-img {
+		background-image: url('../img/playbig920.jpg');
 	}
 }
